WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88023
JSGlobalObject does not mark m_privateNameStructure
https://bugs.webkit.org/show_bug.cgi?id=88023
Summary
JSGlobalObject does not mark m_privateNameStructure
Mark Hahnenberg
Reported
2012-05-31 16:31:27 PDT
We need to mark this so it doesn't get inadvertently garbage collected.
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2012-05-31 17:02:21 PDT
Committed
r119175
: <
http://trac.webkit.org/changeset/119175
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug