JSGlobalObject does not mark m_privateNameStructure https://bugs.webkit.org/show_bug.cgi?id=88023

Rubber stamped by Gavin Barraclough.

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::visitChildren): We need to mark this so it doesn't get
inadvertently garbage collected.


Canonical link: https://commits.webkit.org/105859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119175 268f45cc-cd09-0410-ab3c-d52691b4dbfc